fixed navbar spacing

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -6,7 +6,7 @@
     width: auto;
     font-size: 20px;
     max-width: 100%;
-    padding-top: 40px;
+    padding: 20px 0;
 }
 
 #navbar-container a,
